--- a/index.html
+++ b/index.html
@@ -1,63 +1,55 @@
-<script>
-    // Base de données complète des noms
-    const namesDatabase = {
-        prenoms: [
-            "Emma", "Lucas", "Léa", "Louis", "Chloé", "Hugo", "Sarah", "Nathan", "Jade", "Théo"
-            // Ajoute d'autres noms ici
-        ],
-        fantastiques: [
-            "Eldorion", "Zyntrax", "Aelindra", "Thaelar", "Mystrael"
-            // Ajoute d'autres noms ici
-        ],
-        gamers: [
-            "ShadowWolf", "Xx_ProSniper_xX", "DragonSlayer99", "Epic_Gamer_420", "NinjaWarrior"
-            // Ajoute d'autres noms ici
-        ],
-        entreprises: [
-            "TechNova", "GreenSphere", "InnovaTech", "EcoSolutions", "FutureWave"
-            // Ajoute d'autres noms ici
-        ]
-    };
-
-    const nameTypeSelect = document.getElementById('nameType');
-    const generateBtn = document.getElementById('generateBtn');
-    const generatedNameDiv = document.getElementById('generatedName');
-    const copyBtn = document.getElementById('copyBtn');
-
-    function generateRandomName() {
-        const selectedType = nameTypeSelect.value;
-        const namesList = namesDatabase[selectedType];
-
-        if (namesList && namesList.length > 0) {
-            const randomIndex = Math.floor(Math.random() * namesList.length);
-            const randomName = namesList[randomIndex];
-
-            // Met à jour l'interface utilisateur
-            generatedNameDiv.textContent = randomName;
-            generatedNameDiv.classList.add('fade-in');
-            setTimeout(() => generatedNameDiv.classList.remove('fade-in'), 500);
-        } else {
-            generatedNameDiv.textContent = "Aucun nom disponible.";
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Générateur de Pseudo</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 20px;
+            background-color: #f4f4f9;
         }
-    }
-
-    function copyToClipboard() {
-        const textToCopy = generatedNameDiv.textContent;
-
-        if (textToCopy && textToCopy !== "Cliquez sur Générer pour commencer" && textToCopy !== "Aucun nom disponible.") {
-            navigator.clipboard.writeText(textToCopy)
-                .then(() => {
-                    alert("Nom copié dans le presse-papier !");
-                })
-                .catch(() => {
-                    alert("Échec de la copie. Essayez à nouveau.");
-                });
-        } else {
-            alert("Rien à copier !");
+        input, button {
+            margin: 10px;
+            padding: 10px;
+            font-size: 16px;
         }
-    }
+        .pseudo {
+            margin-top: 15px;
+            font-weight: bold;
+        }
+    </style>
+</head>
+<body>
+    <h1>Générateur de Pseudo</h1>
+    <input type="text" id="baseName" placeholder="Entrer un mot ou prénom" />
+    <button onclick="generatePseudos()">Générer</button>
+    <div id="results"></div>
 
-    // Ajout des écouteurs d'événements
-    generateBtn.addEventListener('click', generateRandomName);
-    copyBtn.addEventListener('click', copyToClipboard);
-</script>
+    <script>
+        function generatePseudos() {
+            const baseName = document.getElementById("baseName").value;
+            const resultsDiv = document.getElementById("results");
+            const chars = "0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ_";
+            let pseudos = "";
+
+            if (baseName.trim() === "") {
+                resultsDiv.innerHTML = "<p>Veuillez entrer un mot ou un prénom.</p>";
+                return;
+            }
+
+            for (let i = 0; i < 5; i++) {
+                let randomSuffix = "";
+                for (let j = 0; j < 4; j++) {
+                    randomSuffix += chars.charAt(Math.floor(Math.random() * chars.length));
+                }
+                pseudos += `<p class="pseudo">${baseName}${randomSuffix}</p>`;
+            }
+
+            resultsDiv.innerHTML = pseudos;
+        }
+    </script>
+</body>
+</html>
